fixed spacing on edit club info

--- a/frontend/src/components/EditClubInfo/EditClubInfo.css
+++ b/frontend/src/components/EditClubInfo/EditClubInfo.css
@@ -154,6 +154,14 @@
     display: block;
   }
 
+  .club-bio-picture-uploader {	
+    margin-top: 30px;		 
+    margin-bottom: 30px;		  
+    display: flex;		
+    flex-direction: column;
+    padding: 15px;
+  }
+
   .tooltip {
     display: none;
   }
